# git-user-switch

./: LICENSE  README.md  pyproject.toml
git_user_switch/: main.py
tests/: test_main.py
